--- a/Velvet_Project.ipynb
+++ b/Velvet_Project.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "```\n",
     "Bioinformatics Project\n",
-    "Salvör Ísberg, Anna Eze, and Nikolas VanKeersbilck\n",
+    "Nikolas VanKeersbilck\n",
     "```"
    ]
   },
